# tensra

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: fizzbuzz.py  xor.py
src/tensra/: __init__.py  data.py  layers.py  loss.py  nn.py  optim.py  tensor.py  train.py
tests/: test_tensra.py
